fix: update admin

--- a/admin/package.json
+++ b/admin/package.json
@@ -2,106 +2,85 @@
   "name": "server-template-admin",
   "main": "index.js",
   "scripts": {
-    "pretty-quick": "pretty-quick",
-    "lint": "eslint . --ignore-path .eslintignore --quiet",
+    "install:clean": "rm -rf node_modules && npm install",
+    "lint": "eslint ./src/**/*.{ts,tsx} --ignore-path .eslintignore --quiet",
     "unit": "echo TODO BABEL_ENV=test jest",
     "test": "echo TODO run tests but not cypress",
     "cypress:run": "echo NOTE: Cypress disabled for admin by default. Add cypress to dockerfiles and run \\'cypress run\\' here. See client as an example.",
     "cypress:open": "echo NOTE: Cypress disabled for admin by default. Add cypress to dockerfiles and run \\'cypress open\\' here. See client as an example.",
-    "start": "NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --public=localhost:9999/admin/sockjs-node/",
-    "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js --mode production",
-    "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
+    "start": "NODE_ENV=development webpack-dev-server --env.development",
+    "build": "NODE_ENV=production webpack -p --env.production",
+    "analyze": "ANALYZE_BUNDLE=true npm run build"
   },
-  "jest": {
-    "setupFiles": [
-      "./config/setup-jest.js"
-    ]
-  },
-  "_NOTE_these_were_added": "TODO are these obsolete: axios, babel-polyfill, history, immutability-helper, prop-types, redux-actions, qs",
-  "_Note": "unused depencencies bevause admin GUI is still under construction",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@material-ui/core": "^3.7.1",
-    "@material-ui/icons": "~3.0.1",
-    "axios": "~0.18.0",
-    "data-generator": "~1.0.0",
-    "fakerest": "~2.1.0",
-    "fetch-mock": "^7.2.7",
-    "history": "~4.7.2",
-    "immutability-helper": "^2.9.0",
-    "json-graphql-server": "^2.1.3",
-    "prop-types": "~15.6.2",
-    "qs": "^6.6.0",
-    "ra-data-fakerest": "^2.5.2",
-    "ra-data-graphql-simple": "^2.5.2",
-    "ra-data-simple-rest": "^2.5.2",
-    "ra-input-rich-text": "^2.4.2",
-    "ra-language-english": "~2.3.0",
-    "ra-language-french": "~2.3.0",
-    "react": "^16.7.0",
-    "react-admin": "^2.5.2",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "~4.3.1",
-    "react-scripts": "^2.1.1",
-    "recompose": "~0.30.0",
-    "redux-actions": "~2.6.1",
-    "redux-form": "^8.0.4",
-    "redux-saga": "~0.16.0",
-    "styled-components": "^4.1.3",
-    "uglifyjs-webpack-plugin": "^2.1.0"
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
+    "@types/history": "4.7.2",
+    "@types/qs": "6.5.3",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
+    "@types/react-redux": "7.0.8",
+    "@types/redux-actions": "2.6.0",
+    "@types/styled-components": "4.1.14",
+    "axios": "0.18.0",
+    "core-js": "3.0.1",
+    "history": "4.9.0",
+    "qs": "6.7.0",
+    "ra-input-rich-text": "2.8.6",
+    "ra-language-english": "2.8.5",
+    "react": "16.8.6",
+    "react-admin": "2.8.6",
+    "react-dom": "16.8.6",
+    "react-hot-loader": "4.8.4",
+    "react-redux": "7.0.2",
+    "redux-actions": "2.6.5",
+    "redux-saga": "1.0.2",
+    "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-decorators": "^7.2.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-function-sent": "^7.2.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-react-transform": "~3.0.0",
-    "babel-plugin-styled-components": "^1.10.0",
-    "css-loader": "^2.0.2",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "~17.1.0",
-    "eslint-config-airbnb-base": "~13.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-loader": "~2.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-jsx-a11y": "~6.1.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "~7.11.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "~3.2.0",
-    "jest": "~23.6.0",
-    "json-loader": "~0.5.7",
-    "prettier": "^1.15.3",
-    "pretty-quick": "^1.6.0",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "~1.1.3",
-    "redux-devtools-log-monitor": "~1.4.0",
-    "redux-logger": "~3.0.6",
-    "redux-saga-tester": "~1.0.379",
-    "redux-testkit": "~1.0.6",
-    "style-loader": "~0.23.0",
-    "webpack": "^4.28.2",
-    "webpack-bundle-analyzer": "~3.0.1",
-    "webpack-cli": "~3.1.0",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.5"
-  },
-  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.3.3",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.7",
+    "@typescript-eslint/eslint-plugin": "1.7.0",
+    "@typescript-eslint/parser": "1.7.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-macros": "2.5.1",
+    "babel-plugin-styled-components": "1.10.0",
+    "babel-plugin-syntax-class-properties": "6.13.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "css-loader": "2.1.1",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-standard": "4.0.0",
+    "file-loader": "3.0.1",
+    "fork-ts-checker-webpack-plugin": "1.2.0",
+    "html-webpack-plugin": "3.2.0",
+    "jest": "24.7.1",
+    "mini-css-extract-plugin": "0.6.0",
+    "prettier": "1.17.0",
+    "source-map-loader": "0.2.4",
+    "style-loader": "0.23.1",
+    "typescript": "3.4.5",
+    "webpack": "4.30.0",
+    "webpack-bundle-analyzer": "3.3.2",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.3.1"
+  }
 }
