--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -16,8 +16,19 @@
     "strictNullChecks": true,
     "noImplicitAny": true,
     "baseUrl": "./",
-    "typeRoots": ["./src/types", "./node_modules/@types"]
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "types": [
+      "node",
+      "jest",
+      "history",
+      "qs",
+      "react",
+      "react-dom",
+      "react-redux",
+      "redux-actions",
+      "styled-components"
+    ]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build", "jest", "test", "__mocks__", "src/sw.js"]
+  "exclude": ["node_modules", "build", "jest", "test", "__mocks__"]
 }
