chore: update gitignore

--- a/admin/.gitignore
+++ b/admin/.gitignore
@@ -1,14 +1,16 @@
+mnt
+taito-run-env.sh
+taito-user-config.sh
 node_modules
-flow-typed/npm
-test/reports
-test/screenshots
-test/videos
-shared
-credentials
-*.log
+site-packages
+tmp
+taitoflag_*
 .DS_Store
-_build
-_build_git
-build
-*.swp
 .vscode
+build
+template-tmp
+*.log
+*.log.*
+*.tmp
+*.pyc
+*~
