--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,6 +36,8 @@ substitutions:
   _TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD:
   _TEMPLATE_DEFAULT_CONTAINER_REGISTRY:
   _TEMPLATE_DEFAULT_KUBERNETES:
+  _TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX:
+  _TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD:
   _TEMPLATE_DEFAULT_POSTGRES:
 
 steps:
@@ -76,6 +78,8 @@ steps:
     export template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     export template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     export template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    export template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    export template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     export template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
     export taito_target_env
     taito_target_env="$${branch_name}"
@@ -86,8 +90,8 @@ steps:
     source ./taito-config.sh
 
     echo "- Get cluster credentials"
-    if ! gcloud container clusters get-credentials "$${kubectl_name}" \
-      --zone "$${gcloud_zone}"; then
+    if ! gcloud container clusters get-credentials "$${kubernetes_name}" \
+      --zone "$${taito_provider_zone}"; then
       echo "ERROR: Get cluster credentials failed"
       exit 1
     fi
@@ -133,6 +137,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-prepare
@@ -162,6 +168,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: scan
@@ -191,6 +199,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 # Build artifacts
@@ -222,6 +232,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-build-admin
@@ -251,6 +263,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-push-admin
@@ -280,6 +294,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-build-client
@@ -309,6 +325,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-push-client
@@ -338,6 +356,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-build-graphql
@@ -367,6 +387,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-push-graphql
@@ -396,6 +418,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-build-server
@@ -425,6 +449,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-push-server
@@ -454,6 +480,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-build-www
@@ -483,6 +511,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-push-www
@@ -512,6 +542,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 # Deploy to target environment
@@ -542,6 +574,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: deployment-deploy
@@ -570,6 +604,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 # Run tests against the target environment
@@ -600,6 +636,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: test
@@ -629,6 +667,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: deployment-verify
@@ -657,6 +697,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 # Publish and release
@@ -687,6 +729,8 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
 - id: artifact-release
@@ -715,4 +759,6 @@ steps:
     - template_default_monitoring_uptime_channels_prod=${_TEMPLATE_DEFAULT_MONITORING_UPTIME_CHANNELS_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
+    - template_default_kubernetes_cluster_prefix=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX}
+    - template_default_kubernetes_cluster_prefix_prod=${_TEMPLATE_DEFAULT_KUBERNETES_CLUSTER_PREFIX_PROD}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
